Tried adding in maven sure fire again lets see what happens